--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,10 @@
+//所有页面的样式
+@use './Home.scss';
+
+
+//所有组件的样式
+@use './Navigation.scss';
+
 :root {
   width: 100vw;
   height: 100vh;
@@ -8,3 +15,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root[data-theme='light'] {
+  --navigation-background: #fff;
+  --navigation-border: #f1f1f1;
+  --navigation-badge-background: #ee502f;
+  --navigation-badge-text: #fff;
+  --brand-normal: #1e80ff;
+  --brand-hover: #1171ee;
+  --brand-click: #0060dd;
+  --brand-disable: #abcdff;
+  --font-first: #252933;
+  --font-second: #515767;
+  --font-third: #8a919f;
+  --font-fourth: #c2c8d1;
+}
+
+// :root[data-theme = dark] {
+//   background-color: #000;
+// }
