--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,8 +1,17 @@
+@mixin list-header($color) {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  font-size: 14px;
+  overflow-x: auto;
+  color: $color;
+}
+
 .home {
   cursor: default;
 
   .tab-list-wrapper {
-    background-color: var(--navigation-background);
+    background-color: var(--background);
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 5%);
     overflow-x: auto;
 
@@ -14,7 +23,7 @@
       font-size: 14px;
       padding: 0 16px;
       margin: auto;
-      color: var(--navigation-tab-text);
+      color: var(--tab-text);
 
       .tab {
         display: flex;
@@ -27,7 +36,112 @@
 
         &.is-active,
         &:hover {
-          color: var(--navigation-active-text);
+          color: var(--active-text);
+        }
+      }
+    }
+  }
+
+  &-content {
+    max-width: 960px;
+    margin: 15px auto 0 auto;
+
+    .content-passage {
+      max-width: 700px;
+      // height: 600px;
+      background-color: var(--background);
+
+      .passage-header {
+        @include list-header(var(--tab-text));
+        padding: 12px 20px;
+        border-bottom: 1px solid hsla(0, 0%, 59.2%, 0.1);
+        overflow-x: auto;
+
+        &-item {
+          padding: 0 8px;
+          border-right: 1px solid hsla(0, 0%, 59.2%, 0.2);
+          white-space: nowrap;
+          cursor: pointer;
+
+          &:last-child {
+            border: none;
+          }
+
+          &.is-active,
+          &:hover {
+            color: var(--active-text);
+          }
+        }
+      }
+
+      .entry-list {
+        .entry {
+          padding: 12px 20px 14px 20px;
+
+          &-layout {
+            display: flex;
+            align-items: center;
+          }
+
+          &-image {
+            flex-shrink: 0;
+            width: 120px;
+            height: 80px;
+          }
+
+          &-text {
+            flex: 1 1 auto;
+            white-space: nowrap;
+            overflow: hidden;
+            margin-right: 15px;
+          }
+
+          &-header {
+            @include list-header(var(--font-third));
+            font-size: 12px;
+            margin-bottom: 12px;
+
+            .dividing {
+              width: 1px;
+              height: 12px;
+              background-color: var(--divide);
+              margin: 0 8px;
+            }
+
+            .entry-author {
+              color: var(--font-first);
+            }
+          }
+
+          h4 {
+            color: var(--font-first);
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+
+          &-content {
+            margin-top: 12px;
+            color: var(--font-third);
+            font-size: 12px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+
+          &-action {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+            font-size: 12px;
+            color: var(--font-second);
+
+            &-item {
+              padding: 0 5px;
+
+              .icon {
+                margin-right: 4px;
+              }
+            }
+          }
         }
       }
     }
@@ -47,18 +161,18 @@
     display: flex;
     flex-wrap: wrap;
     padding: 10px 12px;
-    background-color: var(--navigation-background);
+    background-color: var(--background);
 
     &-item {
       margin: 0 12px 12px 0;
       padding: 2px 12px;
-      color: var(--navigation-tab-text);
+      color: var(--tab-text);
       border-radius: 16px;
-      background-color: var(--navigation-tag-background);
+      background-color: var(--tag-background);
 
       &:hover {
-        color: var(--navigation-active-text);
-        background-color: var(--navigation-tag-background);
+        color: var(--active-text);
+        background-color: var(--tag-background);
       }
     }
   }
