--- a/src/styles/EntryList.scss
+++ b/src/styles/EntryList.scss
@@ -1,80 +1,83 @@
 .entry-list {
   width: 100%;
-  
-  .entry {
-    padding: 12px 20px 14px 20px;
-    cursor: pointer;
 
-    &:hover {
-      background-color: var(--hover-background);
-    }
+  .entry-link {
+    text-decoration: none;
 
-    &-layout {
-      display: flex;
-      align-items: center;
-    }
+    .entry {
+      padding: 12px 20px 14px 20px;
 
-    &-image {
-      flex-shrink: 0;
-      width: 120px;
-      height: 80px;
-    }
-
-    &-text {
-      flex: 1 1 auto;
-      white-space: nowrap;
-      overflow: hidden;
-      margin-right: 15px;
-    }
-
-    &-header {
-      display: flex;
-      align-items: center;
-      list-style: none;
-      font-size: 14px;
-      overflow-x: auto;
-      color: var(--font-third);
-      font-size: 12px;
-      margin-bottom: 12px;
-
-      .dividing {
-        width: 1px;
-        height: 12px;
-        background-color: var(--divide);
-        margin: 0 8px;
+      &:hover {
+        background-color: var(--hover-background);
       }
 
-      .entry-author {
+      &-layout {
+        display: flex;
+        align-items: center;
+      }
+
+      &-image {
+        flex-shrink: 0;
+        width: 120px;
+        height: 80px;
+      }
+
+      &-text {
+        flex: 1 1 auto;
+        white-space: nowrap;
+        overflow: hidden;
+        margin-right: 15px;
+      }
+
+      &-header {
+        display: flex;
+        align-items: center;
+        list-style: none;
+        font-size: 14px;
+        overflow-x: auto;
+        color: var(--font-third);
+        font-size: 12px;
+        margin-bottom: 12px;
+
+        .dividing {
+          width: 1px;
+          height: 12px;
+          background-color: var(--divide);
+          margin: 0 8px;
+        }
+
+        .entry-author {
+          color: var(--font-first);
+        }
+      }
+
+      h4 {
         color: var(--font-first);
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
-    }
 
-    h4 {
-      color: var(--font-first);
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
+      &-content {
+        margin-top: 12px;
+        color: var(--font-third);
+        font-size: 12px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
 
-    &-content {
-      margin-top: 12px;
-      color: var(--font-third);
-      font-size: 12px;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
+      &-action {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        font-size: 12px;
+        color: var(--font-second);
 
-    &-action {
-      display: flex;
-      align-items: center;
-      margin-top: 10px;
-      font-size: 12px;
-      color: var(--font-second);
+        &-item {
+          padding: 0 5px;
 
-      &-item {
-        padding: 0 5px;
-
-        .icon {
-          margin-right: 4px;
+          .icon {
+            margin-right: 4px;
+          }
         }
       }
     }
