--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -93,6 +93,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 15px;
+    cursor: pointer;
 
     span {
       margin-left: 6px;
